--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,7 @@
     --card-foreground: 240 10% 3.9%;
 
     --border: 240 3.7% 80%;
-    --input: 240 5.9% 90%;
+    --input: 240 3.7% 84.1%;
 
     --primary: 240 5.9% 10%;
     --primary-foreground: 0 0% 98%;
@@ -192,19 +192,31 @@
     scrollbar-width: none; /* Firefox */
   }
 
-  /* width */
   ::-webkit-scrollbar {
     width: 9px;
   }
 
-  /* Track */
   ::-webkit-scrollbar-track {
     background: transparent;
   }
 
-  /* Handle */
   ::-webkit-scrollbar-thumb {
     background: hsl(var(--scrollbar-thumb));
     border-radius: 5px;
   }
+}
+
+@keyframes fade-border {
+  0% {
+    border-color: hsl(var(--foreground));
+  }
+  100% {
+    border-color: transparent;
+  }
+}
+
+.highlight-comment {
+  animation: fade-border 2s ease-out;
+  border-width: 2px;
+  border-style: solid;
 }
