--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -15,7 +15,7 @@
 .footnotes {
   margin-top: 2em;
   padding-top: 1em;
-  border-top: 1px solid hsl(var(--border));
+  border-top: 1px solid hsl(var(--foreground));
 }
 
 .footnotes ol {
